--- a/products.html
+++ b/products.html
@@ -25,17 +25,6 @@
             backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(0, 150, 255, 0.2);
         }
-        .product-box {
-            transition: all 0.3s ease;
-            transform: translateZ(0);
-        }
-        .product-box:hover {
-            transform: translateZ(0);
-            box-shadow: 0 0 25px -5px rgba(255, 255, 255, 0.7);
-            border-color: rgba(255, 255, 255, 0.8);
-            outline: 1px solid rgba(255, 255, 255, 0.8);
-            outline-offset: 2px;
-        }
     </style>
 </head>
 <body>
@@ -50,7 +39,7 @@
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Home</a>
-                    <a href="https://skyfallcheats.shop/products" target="_blank" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-cyan-400 text-sm font-medium">Products</a>
+                    <a href="https://skyfallcheats.shop/products" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-cyan-400 text-sm font-medium">Products</a>
                     <a href="https://skyfallcheats.shop/forum" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Forum</a>
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Support</a>
                     <button class="ml-6 px-6 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-6 hover:to-blue-700 text-white font-medium rounded-full text-sm shadow-lg hover:shadow-cyan-500/30">
@@ -67,7 +56,7 @@
             <h2 class="text-4xl font-bold text-white mb-8 text-center title-font">Fortnite</h2>
             <div class="flex space-x-8 pb-2 pl-2 pr-2">
                 <!-- Fortnite Internal -->
-                <div class="product-box flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30">
+                <div class="flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-gray-900/50 shadow-2xl shadow-gray-900/30 transition-all duration-300 hover:shadow-2xl hover:shadow-cyan-500/30 hover:border-cyan-400/50">
                     <div class="p-10">
                         <h2 class="text-4xl font-bold text-white mb-10 text-center title-font">Fortnite Internal</h2>
                         <div class="flex flex-col space-y-6 bg-blue-900/20 p-8 rounded-xl">
@@ -86,7 +75,7 @@
                 </div>
 
                 <!-- Fortnite Private -->
-                <div class="product-box flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30">
+                <div class="flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-gray-900/50 shadow-2xl shadow-gray-900/30 transition-all duration-300 hover:shadow-2xl hover:shadow-cyan-500/30 hover:border-cyan-400/50">
                     <div class="p-10">
                         <h2 class="text-4xl font-bold text-white mb-10 text-center title-font">Fortnite Private</h2>
                         <div class="flex flex-col space-y-6 bg-blue-900/20 p-8 rounded-xl">
