--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                     </div>
                 </div>
                 <div class="hidden md:flex items-center space-x-4 lg:space-x-8">
-                    <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Home</a>
-                    <a href="https://skyfallcheats.shop/products" target="_blank" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Products</a>
+                    <a href="/" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Home</a>
+                    <a href="/products" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Products</a>
                     <a href="https://skyfallcheats.shop/forum" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Forum</a>
                     <button class="ml-6 px-6 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-medium rounded-full text-sm shadow-lg hover:shadow-cyan-500/30">
                         Dashboard
@@ -123,8 +123,8 @@
         <!-- Mobile menu -->
         <div class="mobile-menu hidden md:hidden">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-gray-800/90 backdrop-blur-lg">
-                <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-gray-700">Home</a>
-                <a href="https://skyfallcheats.shop/products" target="_blank" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-gray-700">Products</a>
+                <a href="/" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-gray-700">Home</a>
+                <a href="/products" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-gray-700">Products</a>
                 <a href="https://skyfallcheats.shop/forum" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-gray-700">Forum</a>
                 <button class="w-full mt-2 px-4 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 text-white font-medium rounded-md">
                     Dashboard
@@ -171,7 +171,7 @@
                 Gain Potential with SkyFall!
             </h2>
         </div>
-        <a href="products.html" class="mt-6 inline-block px-8 py-5 text-2xl bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-xl transition-all duration-300 shadow-xl hover:shadow-2xl hover:shadow-cyan-500/40 flex items-center justify-center gap-3 max-w-md mx-auto">
+        <a href="/products" class="mt-6 inline-block px-8 py-5 text-2xl bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-xl transition-all duration-300 shadow-xl hover:shadow-2xl hover:shadow-cyan-500/40 flex items-center justify-center gap-3 max-w-md mx-auto">
             <i class="fas fa-shopping-cart"></i> AVAILABLE PRODUCTS
         </a>
     </div>
